# pea-pme-pulse

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.yaml  Makefile  README.md  nao_config.yaml.example  prefect.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
app/: boursorama_prefect_flow.py
boursorama/: __init__.py  boursorama_peapme.ipynb  config.py  helpers_json.py  isin.py  listing.py  main.py  requirements.txt  session_http.py
data/bronze/ohlcv/: FR0000050353.csv  FR0013153541.csv  FR0013333432.csv  FR0013426004.csv  FR0013506730.csv
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/: definitions.md  sources.yml
dbt/models/gold/: company_scores.sql  financials_score.sql  schema.yml  score_insider.sql  score_news.sql  stocks_score.sql
dbt/models/silver/: amf_documents.sql  amf_financial_signal.sql  companies.sql  rss_articles.sql  schema.yml  yahoo_ohlcv_clean.sql
dbt/semantic/: nao_context.yml
docs/: TODO.md  architecture.md  infra.md  run_manual.md
infra/: .env.monitoring.example  Dockerfile.nao  docker-compose.monitoring.yml  docker-compose.nao.yml  docker-compose.prefect.yml  nginx.conf
infra/grafana/provisioning/dashboards/: provider.yml
infra/prometheus/: prometheus.yml
notes/: 01_vue_ensemble.md  02_architecture.md  03_pipeline_donnees.md  04_flows_prefect.md  05_scoring.md  06_api.md  07_dashboard.md  08_infra.md  09_monitoring.md  10_ci_qualite.md  11_points_attention.md  12_presentation_mathias.md  13_slides_mathias.md  README.md  rapport_RNCP37827BC01_mathias.md  script_presenter.html  slides_marp.md  synthese_ppt_bc01.md
referentiel/: boursorama_peapme_final.csv  companies_draft.csv  ticker_overrides.json
scripts/: boursorama_peapme.ipynb  dev_rss_yahoo_fr.py  run_amf_ingest.py  run_google_news_rss.py  run_yahoo_rss.py
src/api/: main.py
src/bronze/: amf_ingest.py  amf_pdf_ingest.py  boursorama.py  boursorama_peapme.ipynb  boursorama_peapme.py  explore_yfinance.py  fetch_ohlcv.py  fuzzy_match.py  rss_abcbourse.py  rss_google_news.py  rss_yahoo_fr.py  yahoo_ohlcv_bronze.py
src/bronze/rss_abcbourse/: rss_abcbourse.py
src/bronze/yfinance/: fetch_ohlcv.py
src/dashboard/: app.py
src/flows/: bronze_abcbourse_rss.py  bronze_amf_flux.py  bronze_boursorama.py  bronze_boursorama_flow.py  bronze_google_news_rss.py  bronze_rss.py  bronze_silver_gold_boursorama.py  bronze_yahoo_rss.py  bronze_yfinance_ohlcv.py  gold_insider_signals.py  gold_sentiment.py  pipeline_amf.py  silver_amf.py  silver_insider_parser.py  silver_rss.py  silver_yfinance_ohlcv.py  yfinance_pipeline.py
src/flows/utils/: dbt.py
src/gold/: amf_insider_flow.py  amf_insider_score.py  sentiment_scorer.py  stocks_scorer.py
src/pea_pme_pulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/silver/: amf_financial_signal_extract.py  compute_silver.py  silver_amf_insider_parser.py  test_groq.py
tests/bronze/: test_amf_ingest.py  test_bronze_amf_flux.py  test_rss_abcbourse.py  test_rss_google_news.py  test_rss_yahoo_fr.py  test_yahoo_ohlcv_bronze.py
tests/gold/: test_insider_flow.py  test_stocks_score.py
tests/silver/: conftest.py  test_compute_silver.py  test_insider_parser.py
