[project]
name = "pea-pme-pulse"
version = "0.1.0"
description = "Daily investment signal engine for PEA-PME holdings"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "yfinance",
    "ta",
    "feedparser",
    "pandas",
    "rapidfuzz",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]


[tool.ruff]
line-length = 100
target-version = "py311"

# Excluded folders
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

# Activated rules
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes (bugs)
    "I",   # isort (imports)
    "UP",  # python modernisation
    "B",   # bugbear (good patterns)
    "SIM", # simplifications
]

ignore = [
    "E501",  # over-length line
]

# Import sorting
[tool.ruff.lint.isort]
known-first-party = ["src"]

# Ruff formater
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"